--- a/.github/workflows/issue-comment.yml
+++ b/.github/workflows/issue-comment.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Gif Comment
-        uses: amakhnia/Lab5_PartyHorn@v1
+        uses: Marta83/funny-comment-action@v2.1
         id: GifComment
         with:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  
